<resources>
    <string name="app_name">Gym Lover</string>
    <string name="action_settings">Settings</string>
    <string-array name="day_view">
        <item>@string/yesterday</item>
        <item>@string/today</item>
        <item>@string/tomorrow</item>
    </string-array>
    <string name="db_path">/data/data/com.alanddev.gymlover/databases/</string>
    <string-array name="header_images">
        <item>amber_pentagonal_background</item>
        <item>blue_grey_pentagonal_background</item>
        <item>brown_pentagonal_background</item>
        <item>cyan_pentagonal_background</item>
        <item>deep_orange_pentagonal_background</item>
        <item>deep_purple_pentagonal_background</item>
        <item>green_pentagonal_background</item>
        <item>indigo_pentagonal_background</item>
        <item>pink_pentagonal_background</item>
        <item>purple_pentagonal_background</item>
        <item>red_pentagonal_background</item>
        <item>teal_pentagonal_background</item>
    </string-array>
    <string name="navi_header_default">indigo_pentagonal_background</string>
    <string-array name="theme_array">
        <item>Default_Theme</item>
        <item>DeepSkyBlue_Theme</item>
        <item>DodgerBlue_Theme</item>
        <item>LightSkyBlue_Theme</item>
        <item>DarkBlue_Theme</item>
        <item>MediumBlue_Theme</item>
        <item>RoyalBlue_Theme</item>
        <item>BlueViolet_Theme</item>
        <item>Indigo_Theme</item>
        <item>DarkOrchid_Theme</item>
        <item>MediumOrchid_Theme</item>
        <item>Magenta_Theme</item>
        <item>DeepPink_Theme</item>
        <item>Pink_Theme</item>
        <item>Chocolate_Theme</item>
        <item>Tomato_Theme</item>
        <item>Coral_Theme</item>
        <item>OrangeDark_Theme</item>
        <item>OrangeRed_Theme</item>
        <item>Gold_Theme</item>
        <item>DarkGoldenRod_Theme</item>
        <item>GoldenRod_Theme</item>
        <item>DarkKhaki_Theme</item>
        <item>Khaki_Theme</item>
        <item>Olive_Theme</item>
        <item>YellowGreen_Theme</item>
        <item>OliveDrab_Theme</item>
        <item>ChartReuse_Theme</item>
        <item>GreenYellow_Theme</item>
        <item>Green_Theme</item>
        <item>LimeGreen_Theme</item>
        <item>LightGreen_Theme</item>
        <item>DarkSeaGreen_Theme</item>
        <item>SpringGreen_Theme</item>
        <item>SeaGreen_Theme</item>
        <item>MediumAquaMarine_Theme</item>
        <item>LightSeaGreen_Theme</item>
        <item>Teal_Theme</item>
        <item>Cyan_Theme</item>
    </string-array>
    <string-array name="color_array">
        <item>colorPrimaryDark</item>
        <item>colorDeepSkyBlue</item>
        <item>colorDodgerBlue</item>
        <item>colorLightSkyBlue</item>
        <item>colorDarkBlue</item>
        <item>colorMediumBlue</item>
        <item>colorRoyalBlue</item>
        <item>colorBlueViolet</item>
        <item>colorIndigo</item>
        <item>colorDarkOrchid</item>
        <item>colorMediumOrchid</item>
        <item>colorMagenta</item>
        <item>colorDeepPink</item>
        <item>colorPink</item>
        <item>colorChocolate</item>
        <item>colorTomato</item>
        <item>colorCoral</item>
        <item>colorOrangeDark</item>
        <item>colorOrangeRed</item>
        <item>colorGold</item>
        <item>colorDarkGoldenRod</item>
        <item>GoldenRod</item>
        <item>colorDarkKhaki</item>
        <item>colorKhaki</item>
        <item>colorOlive</item>
        <item>colorYellowGreen</item>
        <item>colorOliveDrab</item>
        <item>colorChartReuse</item>
        <item>colorGreenYellow</item>
        <item>colorGreen</item>
        <item>colorLimeGreen</item>
        <item>colorLightGreen</item>
        <item>colorDarkSeaGreen</item>
        <item>colorSpringGreen</item>
        <item>colorSeaGreen</item>
        <item>colorMediumAquaMarine</item>
        <item>colorLightSeaGreen</item>
        <item>colorTeal</item>
        <item>colorCyan</item>
    </string-array>
    <string-array name="language">
        <item>vi</item>
        <item>en</item>
    </string-array>
    <string-array name="language_name">
        <item>Tiếng Việt</item>
        <item>English</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="settings">
        <item>@string/settings_themes</item>
        <item>@string/settings_menu</item>
        <item>@string/settings_language</item>
    </string-array>
    <string name="day">Day</string>
    <string name="exercise">exercises</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_body_fat">Body Fat Percentage</string>
    <string name="name_user">Your Name</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="user_fat">Fat percentage</string>
    <string name="action_save">Done</string>
    <string name="warning_user_name">Chưa nhập tên bạn mà :)</string>
    <string-array name="gender_array">
        <item>@string/gender_boy</item>
        <item>@string/gender_girl</item>
    </string-array>
    <string name="gender_boy">Boy</string>
    <string name="gender_girl">Girl</string>
    <string-array name="weight_choice">
        <item>@string/kg</item>
        <item>@string/lb</item>
    </string-array>
    <string name="lb">lb</string>
    <string-array name="height_choice">
        <item>@string/cm</item>
        <item>@string/inch</item>
    </string-array>
    <string name="inch">inch</string>
    <string name="cm">cm</string>
    <string name="bodyfat_guide">Body Fat</string>
    <string name="user_waist">Waist</string>
    <string name="bodyfat_guide_begin">Please see the picture below to figure out your body</string>
    <string name="calBodyFat">calculator</string>
    <string name="title_activity_exercise_detail">ExerciseDetailActivity</string>
    <string name="exercise_desc">Description</string>
    <string name="birthday">Birthday</string>
    <string name="week">Week</string>
    <string name="action_install">Setting</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_workout_run">Workout Run Activity</string>
    <string name="start">Start</string>
    <string name="start_time_total">00:00:00</string>
    <string name="start_time">00:00</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="menu_workout_run">Run Workout</string>
    <string name="title_activity_workout_setting"> Cấu hình Workout </string>
    <string name="title_activity_work_out_exer">WorkOutExerActivity</string>
    <string name="second">s</string>
    <string name="title_activity_workout_exer">WorkoutExerActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="action_next">Next</string>
    <string name="title_activity_exercise_wo">ExerciseWoActivity</string>
    <string name="kg">kg</string>
    <string name="repeat">Rep</string>
    <string name="calos">calos</string>
    <string name="title_activity_transaction_add">TransactionAddActivity</string>
    <string name="title_activity_result_workout">ResultWorkoutActivity</string>
    <string name="rest_time">00:00</string>
    <string name="totalCalo">Calo Statistic</string>
    <string name="totalWeight">Weight Statistic</string>
    <string name="totalFat">Body Fat</string>
    <string name="totalBMI">Total BMI</string>
    <string name="noticebody">Hãy thường xuyên cập nhật số đo cơ thể để theo dõi sức khỏe hàng ngày nhé :)</string>
    <string name="update">Cập nhật</string>
    <string name="menu_exercise_title">Exercise</string>
    <string name="menu_workout_title">Workout</string>
    <string name="guide_1">First, please input your body information </string>
    <string name="guide_2">Input your body fat :) </string>
    <string name="guide_3">Use menu navigation to easy using</string>
    <string name="guide_4">Click add button to add exercise work</string>
    <string name="guide_5">Input information of exercise work</string>
    <string name="guide_6">And is result</string>
    <string name="guide_7">You can view result by day ,week, month, year</string>
    <string name="guide_8">Click to small arrow to view report your work</string>
    <string name="guide_9">Or view report your body Index</string>
    <string name="guide_10">You can learn exercise by choose Exercise in Menu navigation</string>
    <string name="guide_11">And watch the video </string>
    <string name="guide_12">If confuse the exercise, you can watch the pre-define workout</string>
    <string name="guide_13">And you will see the list of workout exercise</string>
    <string name="guide_14">List of workout by day, you can choose run each exercise or click autorun button to run automatic</string>
    <string name="guide_15">You can configure the workout exercise (in automatic run mode)</string>
    <string name="guide_16">Configure time to satisfy</string>
    <string name="guide_17">Click Run to start, and Done when you finish</string>
    <string name="guide_18">After you click Done, you can edit the value of time, weight, and click Save to save the result </string>
    <string-array name="excercise_grp_names">
        <item>@string/grp_abdo</item>
        <item>@string/grp_back</item>
        <item>@string/grp_bice</item>
        <item>@string/grp_ches</item>
        <item>@string/grp_fore</item>
        <item>@string/grp_glut</item>
        <item>@string/grp_legs</item>
        <item>@string/grp_quad</item>
        <item>@string/grp_shou</item>
        <item>@string/grp_tric</item>
        <item>@string/grp_lats</item>
        <item>@string/grp_hams</item>
        <item>@string/grp_calv</item>
        <item>@string/grp_trap</item>
    </string-array>
    <string name="grp_abdo">Abdominals</string>
    <string name="grp_bice">Biceps</string>
    <string name="grp_ches">Chest</string>
    <string name="grp_legs">Legs</string>
    <string name="grp_fore">Forearms</string>
    <string name="grp_glut">Glutes</string>
    <string name="grp_back">Back</string>
    <string name="grp_shou">Shoulders</string>
    <string name="grp_tric">Triceps</string>
    <string name="grp_quad">Quadricep</string>
    <string name="grp_lats">Lats</string>
    <string name="grp_hams">Hamstrings</string>
    <string name="grp_calv">Calves</string>
    <string name="grp_trap">Traps</string>
    <string-array name="excercise_grp_imgs">
        <item>abdominals</item>
        <item>back</item>
        <item>biceps</item>
        <item>chest</item>
        <item>forearms</item>
        <item>gluter</item>
        <item>legs</item>
        <item>quadriceps</item>
        <item>shoulders</item>
        <item>triceps</item>
        <item>lats</item>
        <item>hamstrings</item>
        <item>calves</item>
        <item>traps</item>
    </string-array>
    <string name="menu_report">Report</string>
    <string name="menu_user_title">Edit profile</string>
    <string name="setting">Setting</string>
    <string name="action_view_day">View by day</string>
    <string name="action_view_month">View by month</string>
    <string name="action_view_week">View by week</string>
    <string name="action_view_year">View by year</string>
</resources>