<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_user_title" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_exercise_title" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_workout_title" />
        <item
            android:id="@+id/nav_run_workout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_workout_run" />

        <item
            android:id="@+id/nav_run_report"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_report" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_setting" android:icon="@mipmap/ic_settings"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
