<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:gravity="top"
    tools:showIn="@layout/activity_report"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alanddev.gymlover.ui.ReportActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_report" tools:context="com.alanddev.gymlover.ui.ReportActivity">



        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize = "14sp"
            android:layout_centerHorizontal="true"
            android:text="@string/noticebody"
            android:textColor="@color/colorDeepSkyBlue"
            android:layout_gravity="center_horizontal"
            />
        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/update"
            android:id="@+id/update"
            android:gravity="center"
            android:background="#1E88E5"
            android:layout_gravity="center_horizontal"
            />

        <TableRow
            android:id="@+id/hr1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorDivider" >
        </TableRow>
        <TextView
            android:id="@+id/txtTotalCalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal = "true"
            android:text="@string/totalFat"
            android:textSize="@dimen/text_size_default_big"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartBodyFat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_barchart_trend" />
        <TableRow
            android:id="@+id/hr2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorDivider" >
        </TableRow>

        <TextView
            android:id="@+id/txtTotalWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal = "true"
            android:text="@string/totalBMI"
            android:textSize="@dimen/text_size_default_big"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartBMI"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_barchart_trend" />

<!--        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal = "true"
            android:text="@string/update" />-->




    </LinearLayout>
</ScrollView>