<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user" tools:context="com.alanddev.gymlover.ui.UserActivity">



    <LinearLayout android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/avatar"
            android:layout_gravity="center_vertical"
            android:onClick="clickChooseImage"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:hint="@string/name_user"
            android:textSize="18dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgdate"
            android:src="@mipmap/calendar"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtdate"
            android:focusable="false"
            android:hint="@string/birthday"
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/lvHeight"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginLeft="10dp"
        >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageHeight"
            android:clickable="false"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_user_height" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeight"
            android:hint="@string/user_height"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/spinner_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/height_choice"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageWeight"
            android:clickable="false"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_user_weight"
            />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWeight"
            android:hint="@string/user_weight"
            android:inputType="numberDecimal"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"/>
        <Spinner
            android:id="@+id/spinner_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/weight_choice"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageGender"
            android:clickable="false"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_gender_male"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_gender"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageFat"
            android:clickable="false"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_user_fat" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtFat"
            android:focusable="false"
            android:hint="@string/user_fat"
            android:onClick="onClickBodyFat"
            android:inputType="numberDecimal"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>


    </LinearLayout>





</LinearLayout>
